// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 22,
    }
  }
>
  <div
    pathname={undefined}
    text="para ver o contato do fornecedor."
  >
    SignUpLink
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 22,
    }
  }
>
  <div
    className="Component-underlineOnHover-1"
    to="/suppliers/undefined"
  >
    Link - 
    <p
      className="MuiTypography-root-2 MuiTypography-body1-11 MuiTypography-colorPrimary-32"
    />
  </div>
</div>
`;
